--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,4 +7,7 @@
     <string name="back_button">Bouton retour</string>
     <string name="cocktails_list">cocktails_list</string>
     <string name="cocktails_composition">cocktails_composition</string>
+    <string name="profileHome">profileHome</string>
+    <string name="profileShare">profileShare</string>
+
 </resources>
